# Shidacea-CPP

./: .gitignore  .gitmodules  CMakeLists.txt  Changelog.txt  Main.cpp  Main.h  MapConfig.html  README.md  SDC.html  SDCMeta.html  _index.html  class_list.html  file.README.html  index.html  method_list.html  mruby_build_config.rb  top-level-namespace.html
.github/workflows/: build_doc  build_doc.yml  build_ubuntu.yml  build_windows.yml  main.yml
Launshi/: project.json
Launshi/scripts/core/: Data.rb  MainLoop.rb
Launshi/scripts/custom/: Game.rb
Launshi/scripts/custom/resources/: Launshi.rb
MrbWrap/: CastToRuby.h  Converter.h  CountArgs.h  DefaultWrap.h  GetArgs.h  Helper.cpp  Helper.h  MemberSpec.h  MrbWrap.h
SDC/: AI.html  Actionshape.html  BaseGame.html  Button.html  Collider.html  CollisionShape.html  CollisionShapeBox.html  CollisionShapeCircle.html  CollisionShapeLine.html  CollisionShapePoint.html  CollisionShapeTriangle.html  Color.html  Coordinates.html  CustomTile.html  Data.html  Debug.html  DrawShape.html  DrawShapeCircle.html  DrawShapeLine.html  DrawShapePoint.html  DrawShapeRectangle.html  DrawShapeTriangle.html  Entity.html  Event.html  EventKey.html  EventMouse.html  EventType.html  FloatRect.html  Font.html  Hitshape.html  Hurtshape.html  IntRect.html  Limiter.html  Map.html  MapConfig.html  MapLayer.html  Marshal.html  Music.html  RenderStates.html  Scene.html  (+12 more)
SDC/AI/: Script.html
SDCMeta/: AIBackend.html  ClassProperty.html  DataStorage.html  Property.html
Shidacea/audio/: Music.cpp  Music.h
Shidacea/core/: Collisions.cpp  Collisions.h  Coordinates.cpp  Coordinates.h  CoreEntity.cpp  CoreEntity.h  Events.cpp  Events.h  FloatRect.cpp  FloatRect.h  IntRect.cpp  IntRect.h  Shape.cpp  Shape.h  ShapeCollisions.cpp
Shidacea/graphics/: ImGuiWrapper.cpp  ImGuiWrapper.h  RenderStates.cpp  RenderStates.h  ResourceContainer.h  ResourceManager.cpp  ResourceManager.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  View.cpp  View.h  Window.cpp  Window.h
Shidacea/map/: Map.cpp  Map.h  MapLayer.cpp  MapLayer.h  Tile.cpp  Tile.h  Tileset.cpp  Tileset.h
Shidacea/network/: Http.cpp  Http.h  Listener.cpp  Listener.h  Socket.cpp  Socket.h
Shidacea/scripting/: Helper.cpp  Helper.h
core/audio/: Music.cpp  Sound.cpp  Sound.h  SoundBuffer.cpp  SoundBuffer.h
core/graphics/: Color.cpp  Color.h  Font.cpp  Font.h  ImGuiWrapper.cpp  RenderStates.cpp  RenderStates.h  Sprite.cpp  Sprite.h  Text.cpp  Text.h  Texture.cpp  View.cpp  Window.cpp  Window.h
core/internal/: Collisions.cpp  Collisions.h  Coordinates.cpp  Events.cpp  FloatRect.cpp  IntRect.cpp  Shape.cpp  Shape.h  ShapeCollisions.cpp  Version.h
core/map/: MapLayer.cpp  MapLayer.h  Tile.cpp  Tile.h  Tileset.cpp  Tileset.h
core/network/: Listener.cpp  Listener.h  Socket.cpp
core/scripting/: ClassInfo.h  CountArgs.h  DefaultWrap.h  FileString.h  FormatString.h  Helper.cpp  Helper.h  MemberSpec.h  MrbLoad.cpp  Script.cpp  Script.h  StaticString.h
demo_projects/Example_Collision/: project.json
demo_projects/Example_Collision/scripts/: Main.rb  SceneCollision.rb  TestShape.rb
demo_projects/Example_Shooter/: project.json
demo_projects/Example_Shooter/scripts/: Game.rb  Main.rb  ShooterTest.rb
demo_projects/Example_Shooter/scripts/basics/: Asteroid.rb  Drive.rb  Particle.rb  Shield.rb  Ship.rb  Space.rb  Star.rb
demo_projects/Example_Shooter/scripts/custom/: Game.rb  Main.rb
demo_projects/Example_Shooter/scripts/drives/: CombustionDrive.rb  DarkMatterDrive.rb  DisplacementDrive.rb  Hyperdrive.rb  ImpulseDrive.rb  IonDrive.rb  QuantumDrive.rb  SubspaceDrive.rb  (+1 more)
demo_projects/Example_Test/: config.json  project.json
engine/audio/: Music.cpp  Music.h  Sound.cpp  Sound.h  SoundBuffer.cpp  SoundBuffer.h  TimeSpan.cpp  TimeSpan.h
engine/graphics/: Color.cpp  Color.h  DrawShape.cpp  DrawShape.h  Font.cpp  Font.h  ImGuiWrapper.cpp  ImGuiWrapper.h  RenderQueue.cpp  RenderQueue.h  RenderQueueWindow.cpp  RenderQueueWindow.h  RenderStates.cpp  RenderStates.h  Sprite.cpp  Sprite.h  Text.cpp  Text.h  Texture.cpp  Texture.h  View.cpp  View.h  Window.cpp  Window.h
engine/internal/: Coordinates.cpp  Coordinates.h  Definitions.h  Events.cpp  Events.h  FloatRect.cpp  FloatRect.h  IntRect.cpp  IntRect.h  Shape.cpp  Shape.h  ShapeCollisions.cpp
engine/map/: MapLayer.cpp  MapLayer.h  Tile.cpp  Tile.h  Tileset.cpp  Tileset.h
engine/network/: Listener.h  Socket.h
kernel/scripts/core/: Button.rb  Data.rb  Debug.rb  Event.rb  Limiter.rb  MainLoop.rb  Map.rb  SDC.rb
kernel/scripts/custom/: Main.rb
kernel/scripts/include/: DataStorage.rb
kernel_scripts/core/: AI.rb  Entity.rb  Limiter.rb  MainLoop.rb
kernel_scripts/custom/: Main.rb
kernel_scripts/custom/entities/: TestEntity.rb
kernel_scripts/custom/scenes/: SceneMain.rb
lib/: scripts.json
lib/core/: Button.rb  Constants.rb  Entity.rb  Limiter.rb  MainLoop.rb  Map.rb  SDC.rb  Scene.rb
lib/core/SDCMain/: Attributes.rb  Constants.rb
lib/include/: DataStorage.rb
scripts/: Entities.rb  GlobalContainer.rb  Main.rb  MainLoop.rb  Scene.rb  Scenes.rb  Void.rb
scripts/core/: AI.rb  ActionShape.rb  CustomTile.rb  Data.rb  Entity.rb  MainLoop.rb  Map.rb  MapConfig.rb  SDC.rb  Scene.rb  SpecialContainer.rb
scripts/custom/: Entities.rb  Game.rb  Scenes.rb
scripts/custom/entities/: Entities.rb  TestEntity.rb
scripts/custom/scenes/: SceneTest.rb  Scenes.rb
scripts_core/: ActionShape.rb  Entity.rb  Limiter.rb  MainLoop.rb  SDC.rb  Scene.rb
scripts_custom/: Main.rb
scripts_custom/entities/: TestEntity.rb
scripts_custom/resources/map_configs/: TestMap.rb
scripts_custom/resources/tilesets/: Default.rb
scripts_custom/scenes/: SceneStart.rb  SceneTest.rb
scripts_custom/scenes/ExampleShooter/: SceneShooterShop.rb  SceneShooterSpace.rb
scripts_custom/scenes/ExampleTest/: SceneTest.rb
scripts_include/: ClassProperty.rb
src/: Main.cpp  Main.h  MrbLoad.cpp  MrbLoad.h  Script.cpp  Script.h  Version.h
utility/: GenerateScripts.cmake  MrbWrapDoc.rb  document_engine.rb  mrbwrap_doc.rb  mruby_build_config.rb  script_collector.rb
(+20 files in other folders)
